[package]
name = "framework-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = { version = "0.6.4", features = ["serde"] }
rand = { version = "0.8.5" }
itertools = "0.11.0"
ordered-float = "3.9.1"
