[package]
name = "framework-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "floyd_warshall"
harness = false

[dependencies]
petgraph = { version = "0.6.4", features = ["serde"] }
rand = { version = "0.8.5" }
rayon = "1.8.0"
itertools = "0.12.1"
ordered-float = "4.2.0"
cc = "1.0.83"
cxx = "1.0"
log = "0.4.20"

[dev-dependencies]
criterion = "0.5.1"

[build-dependencies]
cxx-build = "1.0"
