[package]
name = "para-graph"
version = "0.1.0"
edition = "2021"
authors = ["Eliton Machado <elitonmachadod200@gmail.com>"]
description = "\"Para-Graph\" delivers swift, parallel graph algorithms in Rust, optimized for CPU and GPU. Ideal for HPC workflows."
repository = "https://github.com/EMachad0/Para-Graph"
license = "MIT"

[[bench]]
name = "floyd_warshall"
harness = false

[[bench]]
name = "radix_sort"
harness = false

[[bench]]
name = "binary_search"
harness = false

[[bench]]
name = "gaussian_elimination"
harness = false

[[bench]]
name = "prefix_sum"
harness = false

[dependencies]
petgraph = { version = "0.6.4", features = ["serde"] }
rand = { version = "0.8.5" }
rayon = "1.8.0"
itertools = "0.12.1"
ordered-float = "4.2.0"
cc = "1.0.83"
cxx = "1.0"
log = "0.4.20"
num = { version = "0.4.2", features = ["num-bigint"] }

[dev-dependencies]
criterion = "0.5.1"

[build-dependencies]
cxx-build = "1.0"
